Add subheading and improve wrapping

--- a/packages/components/src/Document/Document.mdx
+++ b/packages/components/src/Document/Document.mdx
@@ -20,6 +20,7 @@ import { IconName } from "../Icon";
 
     <Header>
       <h2>This is the exceptionally long document header.</h2>
+      <p>This is the subtitle.</p>
     </Header>
 
     <Detail>
