Change description list to a tuple

--- a/packages/components/src/Document/Document.mdx
+++ b/packages/components/src/Document/Document.mdx
@@ -25,10 +25,10 @@ import { IconName } from "../Icon";
 
     <Detail>
       <h4>Invoice details</h4>
-      <DescriptionList data={{
-        Issued: "2018-12-08",
-        Due: "2019-01-06",
-      }} />
+      <DescriptionList data={[
+        ["Issued", "2018-12-08"],
+        ["Due", "2019-01-06"],
+      ]} />
     </Detail>
 
     <Content>
