Split subcomponents out into separate files with their own tests and docs

--- a/packages/components/src/Document/Document.mdx
+++ b/packages/components/src/Document/Document.mdx
@@ -3,7 +3,7 @@ menu: Components
 ---
 
 import { Playground, Props } from "docz";
-import { Document, Title, Header, Detail, Content, DecoratedIcon, StatusLabel } from "./Document";
+import { Document, Title, Header, Detail, Content, DecoratedIcon, StatusLabel } from ".";
 import { DescriptionList } from "../DescriptionList";
 import { IconName } from "../Icon";
 
@@ -36,3 +36,15 @@ import { IconName } from "../Icon";
     </Content>
   </Document>
 </Playground>
+
+
+## Properties
+
+<Props of={Document} />
+
+## API
+
+- `<Title>`
+- `<Header>`
+- `<Detail>`
+- `<Content>`
