--- a/packages/components/src/Document/Document.mdx
+++ b/packages/components/src/Document/Document.mdx
@@ -3,7 +3,16 @@ menu: Components
 ---
 
 import { Playground, Props, Link } from "docz";
-import { Document, Title, Header, Detail, Content, DecoratedIcon, StatusLabel } from ".";
+import {
+  Document,
+  Title,
+  Header,
+  ContactInfo,
+  Detail,
+  Content,
+  DecoratedIcon,
+  StatusLabel
+} from ".";
 import { DescriptionList } from "../DescriptionList";
 import { IconName } from "../Icon";
 
@@ -15,17 +24,21 @@ import { IconName } from "../Icon";
 
 <Playground>
   <Document accentColor="purple">
-    <Title>
+    <Header>
       <DecoratedIcon iconName={IconName.invoice} />
       <StatusLabel status="pending" />
 
       <h3>Invoice #1</h3>
-    </Title>
+    </Header>
 
-    <Header>
+    <Title>
       <h2>This is the exceptionally long document header.</h2>
       <p>This is the subtitle.</p>
-    </Header>
+    </Title>
+
+    <ContactInfo>
+      This is the section for contact info.
+    </ContactInfo>
 
     <Detail>
       <h4>Invoice details</h4>
@@ -38,9 +51,9 @@ import { IconName } from "../Icon";
     <Content>
       <p>This is the document content.</p>
     </Content>
+
   </Document>
 </Playground>
-
 
 ## Document Properties
 
@@ -50,27 +63,32 @@ import { IconName } from "../Icon";
 
 The Title section provides a top level overview.
 
-Use a `<DecoratedIcon />` and `<StatusLabel />` to communicate the type of document and the current status.
+Use a `<DecoratedIcon />` and `<StatusLabel />` to communicate the type of
+document and the current status.
 
 ### DecoratedIcon
 
-The decorated icon wraps an `<Icon />`in a background. The background color is inherited from the `accentColor` of the `<Document />`
+The decorated icon wraps an `<Icon />`in a background. The background color is
+inherited from the `accentColor` of the `<Document />`
 
 <Props of={DecoratedIcon} />
 
 ### StatusLabel
 
-Displays the current state of the document. The status label wraps an `<InlineLabel />` and selects a color based on the status.
+Displays the current state of the document. The status label wraps an
+`<InlineLabel />` and selects a color based on the status.
 
 <Props of={StatusLabel} />
 
 ## Header
 
-Use the Header to display information about the issuee, such as the client name and property information.
+Use the Header to display information about the issuee, such as the client name
+and property information.
 
 ## Detail
 
-The Detail section is typically used for metadata, such as due dates, payment terms, and related documents.
+The Detail section is typically used for metadata, such as due dates, payment
+terms, and related documents.
 
 ## Content
 
