--- a/packages/components/src/Table/Table.mdx
+++ b/packages/components/src/Table/Table.mdx
@@ -16,8 +16,8 @@ import {
 # Table
 
 ![Stage: Pre Release](https://img.shields.io/badge/Stage-Pre--Release-EF5733.svg)
-![Responsive: X](https://img.shields.io/badge/Responsive-✕-EF5733.svg)
-![Accessibility: X](https://img.shields.io/badge/Accessibility-✕-EF5733.svg)
+![Responsive: X](https://img.shields.io/badge/Responsive-%E2%9C%95-EF5733.svg)
+![Accessibility: X](https://img.shields.io/badge/Accessibility-%E2%9C%95-EF5733.svg)
 
 Tables are used to organize and display tabular data to users.
 
