Add component status component.

--- a/packages/components/src/TextField/TextField.mdx
+++ b/packages/components/src/TextField/TextField.mdx
@@ -3,9 +3,12 @@ menu: Components
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { TextField } from ".";
 
 # Text Field
+
+<ComponentStatus stage="pre" responsive="no" accessible="no" />
 
 Text fields are used in forms to accept input from users.
 
@@ -16,7 +19,6 @@ Text fields are used in forms to accept input from users.
   <TextField placeholder="Normal input" />
   <TextField size="large" placeholder="Large input" />
 </Playground>
-
 
 ## Text Field States
 
