--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -3,9 +3,12 @@ menu: Components
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { Icon, IconName } from "./";
 
 # Icon
+
+<ComponentStatus stage="pre" responsive="yes" accessible="no" />
 
 Atlantis provides built-in icons that represent common tasks and types of
 content in a variety of use cases.
@@ -14,8 +17,8 @@ Icons are used to visually communicate core parts of the product and available
 actions. They can act as wayfinding tools to more easily understand where they
 are in the product, and common interaction patterns that are available.
 
-It’s a good idea to use these built-in icons as much as possible because
-they're familiar to people.
+It’s a good idea to use these built-in icons as much as possible because they're
+familiar to people.
 
 Use icons as intended. Provided icons have a specific, meaning. To avoid
 confusing users, it’s essential that each image be used in accordance with its
