--- a/packages/components/src/InlineLabel/InlineLabel.mdx
+++ b/packages/components/src/InlineLabel/InlineLabel.mdx
@@ -3,11 +3,15 @@ menu: Components
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { InlineLabel } from ".";
 
 # Inline Label
 
-Inline labels are typically used to indicate state/status on objects within the application.
+<ComponentStatus stage="pre" responsive="no" accessible="no" />
+
+Inline labels are typically used to indicate state/status on objects within the
+application.
 
 ## Sizes
 
@@ -25,7 +29,7 @@ Inline labels are typically used to indicate state/status on objects within the 
 
 ## Properties
 
- <Props of={InlineLabel} />
+<Props of={InlineLabel} />
 
 ## Colours
 
