--- a/packages/components/src/Table/Table.mdx
+++ b/packages/components/src/Table/Table.mdx
@@ -3,6 +3,7 @@ menu: Components
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import {
   Table,
   Header,
@@ -15,9 +16,7 @@ import {
 
 # Table
 
-![Stage: Pre Release](https://img.shields.io/badge/Stage-Pre--Release-EF5733.svg)
-![Responsive: X](https://img.shields.io/badge/Responsive-%E2%9C%95-EF5733.svg)
-![Accessibility: X](https://img.shields.io/badge/Accessibility-%E2%9C%95-EF5733.svg)
+<ComponentStatus stage="pre" responsive="no" accessible="no" />
 
 Tables are used to organize and display tabular data to users.
 
