Zak doesn’t like `u`.

--- a/packages/colors/README.mdx
+++ b/packages/colors/README.mdx
@@ -5,7 +5,7 @@ route: /colors
 
 # Colors
 
-Colours for the Jobber Atlantis Design System
+Colors for the Jobber Atlantis Design System
 
 ## Installation
 
