Fixup the readme.
Oh, and a little bug in the icon Docs.

--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -3,7 +3,7 @@ menu: Components
 ---
 
 import { Playground, Props } from "docz";
-import { Icon, IconName } from "./";
+import { Icon } from "./";
 
 # Icon
 
