Add component status component. (#41)

--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -3,9 +3,12 @@ menu: Components
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { Icon } from "./";
 
 # Icon
+
+<ComponentStatus stage="pre" responsive="yes" accessible="no" />
 
 Atlantis provides built-in icons that represent common tasks and types of
 content in a variety of use cases.
