Bring in status component.

--- a/packages/components/src/DescriptionList/DescriptionList.mdx
+++ b/packages/components/src/DescriptionList/DescriptionList.mdx
@@ -4,9 +4,12 @@ menu: Components
 ---
 
 import { Playground, Props } from "docz";
+import { ComponentStatus } from "@jobber/docx";
 import { DescriptionList } from ".";
 
 # Description List
+
+<ComponentStatus stage="pre" responsive="no" accessible="no" />
 
 Description Lists are used to display a list of terms and descriptions.
 
