--- a/packages/components/src/Card/Card.mdx
+++ b/packages/components/src/Card/Card.mdx
@@ -3,28 +3,31 @@ menu: Components
 ---
 
 import { Playground, Props, Link } from "docz";
-import { Card, CardBanner, CardHeader, CardDetail, CardContent } from ".";
+import { ComponentStatus } from "@jobber/docx";
+import { Card, CardHeader, CardContent } from ".";
 
 # Card
 
-![Stage: Pre Release](https://img.shields.io/badge/Stage-Pre--Release-EF5733.svg)
-![Responsive: X](https://img.shields.io/badge/Responsive-%E2%9C%95-EF5733.svg)
-![Accessibility: X](https://img.shields.io/badge/Accessibility-%E2%9C%95-EF5733.svg)
+<ComponentStatus stage="pre" responsive="no" accessible="no" />
+
+In Jobber a card is used to group related information and tasks to make things
+easier to scan, and action upon. Cards also contain many optional sub-components
+to provide extra structure in a predictable way.
+
+## Simple Example
+
+<Playground>
+  <Card simple accentColor="purple">
+    <p>This is the card content.</p>
+  </Card>
+</Playground>
 
 <Playground>
   <Card accentColor="purple">
-    <CardBanner>
-      <h3>Invoice #1</h3>
-    </CardBanner>
-
     <CardHeader>
       <h2>This is the exceptionally long card header.</h2>
       <p>This is the subtitle.</p>
     </CardHeader>
-
-    <CardDetail>
-      <h4>Details</h4>
-    </CardDetail>
 
     <CardContent>
       <p>This is the card content.</p>
@@ -36,3 +39,22 @@ import { Card, CardBanner, CardHeader, CardDetail, CardContent } from ".";
 ## Card Properties
 
 <Props of={Card} />
+
+## `CardBanner`
+
+### Simple Example
+
+<Playground>
+  <Card>
+    <CardBanner>
+      <h3>Invoice #1</h3>
+    </CardBanner>
+
+    <CardContent>
+      <p>This is the card content.</p>
+    </CardContent>
+
+  </Card>
+</Playground>
+
+<Props of={CardBanner} />
