Cleanup some names.

--- a/plop/templates/component/{{name}}.mdx
+++ b/plop/templates/component/{{name}}.mdx
@@ -19,7 +19,7 @@ In Jobber a {{ name }} is used to …
 </Playground>
 
 <Playground>
-  <{{ name }} text="Bob" important />
+  <{{ name }} text="Bob" loud />
 </Playground>
 
 ## {{ name }} Properties
