--- a/packages/colors/README.mdx
+++ b/packages/colors/README.mdx
@@ -27,6 +27,7 @@ Import the `@jobber/foundation` stylesheet into your own css
 
 .myLabel {
   color: var(--color-blue);
+  padding: var(--space-base);
 }
 ```
 
