--- a/packages/design/src/Spacing.mdx
+++ b/packages/design/src/Spacing.mdx
@@ -8,28 +8,32 @@ route: /space
 
 Spacing for the Jobber Atlantis Design System
 
-export const baseStyle = {
-  backgroundColor: "var(--color-indigo)",
-  width: "var(--space-base)"
-};
+export function Example({ of: size }) {
+  const style = {
+    width: "var(--space-base)",
+    height: `var(--space-${size})`,
+    backgroundColor: "var(--color-indigo)"
+  };
+  return <div style={style} />;
+}
 
-export function Height({ of: propertyName }) {
+export function Height({ of: size }) {
   const element = document.createElement("div");
-  element.style.height = `var(${propertyName})`;
+  element.style.height = `var(--space-${size})`;
   document.body.appendChild(element);
   const value = getComputedStyle(element).height;
   element.remove();
   return value;
 }
 
-| Name                  | Visual                                                              | Value                               |
-| :-------------------- | :------------------------------------------------------------------ | :---------------------------------- |
-| `--space-minuscule`   | <div style={{ ...baseStyle, height: "var(--space-minuscule)"}} />   | <Height of="--space-minuscule" />   |
-| `--space-smallest`    | <div style={{ ...baseStyle, height: "var(--space-smallest)"}} />    | <Height of="--space-smallest" />    |
-| `--space-smaller`     | <div style={{ ...baseStyle, height: "var(--space-smaller)"}} />     | <Height of="--space-smaller" />     |
-| `--space-small`       | <div style={{ ...baseStyle, height: "var(--space-small)"}} />       | <Height of="--space-small" />       |
-| `--space-base`        | <div style={{ ...baseStyle, height: "var(--space-base)" }} />       | <Height of="--space-base" />        |
-| `--space-large`       | <div style={{ ...baseStyle, height: "var(--space-large)"}} />       | <Height of="--space-large" />       |
-| `--space-larger`      | <div style={{ ...baseStyle, height: "var(--space-larger)"}} />      | <Height of="--space-larger" />      |
-| `--space-largest`     | <div style={{ ...baseStyle, height: "var(--space-largest)"}} />     | <Height of="--space-largest" />     |
-| `--space-extravagant` | <div style={{ ...baseStyle, height: "var(--space-extravagant)"}} /> | <Height of="--space-extravagant" /> |
+| Name                  | Visual                       | Value                       |
+| :-------------------- | :--------------------------- | :-------------------------- |
+| `--space-minuscule`   | <Example of="minuscule" />   | <Height of="minuscule" />   |
+| `--space-smallest`    | <Example of="smallest" />    | <Height of="smallest" />    |
+| `--space-smaller`     | <Example of="smaller" />     | <Height of="smaller" />     |
+| `--space-small`       | <Example of="small" />       | <Height of="small" />       |
+| `--space-base`        | <Example of="base" />        | <Height of="base" />        |
+| `--space-large`       | <Example of="large" />       | <Height of="large" />       |
+| `--space-larger`      | <Example of="larger" />      | <Height of="larger" />      |
+| `--space-largest`     | <Example of="largest" />     | <Height of="largest" />     |
+| `--space-extravagant` | <Example of="extravagant" /> | <Height of="extravagant" /> |
