--- a/packages/design/src/Spacing.mdx
+++ b/packages/design/src/Spacing.mdx
@@ -10,8 +10,8 @@ Spacing for the Jobber Atlantis Design System
 
 export function Example({ of: size }) {
   const style = {
-    width: "var(--space-base)",
-    height: `var(--space-${size})`,
+    width: `var(--space-${size})`,
+    height: "var(--space-base)",
     backgroundColor: "var(--color-indigo)"
   };
   return <div style={style} />;
