add font size and line height

--- a/packages/components/src/Typography/Typography.mdx
+++ b/packages/components/src/Typography/Typography.mdx
@@ -15,12 +15,24 @@ In Jobber a Typography is used to …
 ## Simple Example
 
 <Playground>
-  <Typography size="venti">Page title</Typography>
-  <Typography size="largest">Subtitle</Typography>
-  <Typography size="larger">Section</Typography>
-  <Typography size="large">Subsection</Typography>
-  <Typography size="base">Labels</Typography>
-  <Typography size="small">Overline</Typography>
+  <Typography element="h1" size="jumbo" textCase="uppercase">
+    Page title
+  </Typography>
+  <Typography element="h2" size="largest" textCase="uppercase">
+    Subtitle
+  </Typography>
+  <Typography element="h3" size="larger">
+    Content Group
+  </Typography>
+  <Typography element="h4" size="large">
+    Section
+  </Typography>
+  <Typography element="h5" size="base">
+    Subsection
+  </Typography>
+  <Typography element="h6" size="small" textCase="uppercase">
+    Overline
+  </Typography>
   <Typography size="base">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quae
     architecto accusamus cumque voluptate aspernatur repellendus natus, quo
