add font weights

--- a/packages/components/src/Typography/Typography.mdx
+++ b/packages/components/src/Typography/Typography.mdx
@@ -15,22 +15,33 @@ In Jobber a Typography is used to …
 ## Simple Example
 
 <Playground>
-  <Typography element="h1" size="jumbo" textCase="uppercase">
+  <Typography element="h1" size="jumbo" textCase="uppercase" fontWeight="black">
     Page title
   </Typography>
-  <Typography element="h2" size="largest" textCase="uppercase">
+  <Typography
+    element="h2"
+    size="largest"
+    textCase="uppercase"
+    fontWeight="black"
+  >
     Subtitle
   </Typography>
-  <Typography element="h3" size="larger">
+  <Typography element="h3" size="larger" fontWeight="black" fontWeight="bold">
     Content Group
   </Typography>
-  <Typography element="h4" size="large">
+  <Typography element="h4" size="large" fontWeight="black" fontWeight="bold">
     Section
   </Typography>
-  <Typography element="h5" size="base">
+  <Typography element="h5" size="base" fontWeight="black" fontWeight="bold">
     Subsection
   </Typography>
-  <Typography element="h6" size="small" textCase="uppercase">
+  <Typography
+    element="h6"
+    size="small"
+    textCase="uppercase"
+    fontWeight="black"
+    fontWeight="bold"
+  >
     Overline
   </Typography>
   <Typography size="base">
