adjust typography examples

--- a/packages/components/src/Typography/Typography.mdx
+++ b/packages/components/src/Typography/Typography.mdx
@@ -28,25 +28,19 @@ In Jobber a Typography is used to …
     Subtitle
   </Typography>
   <br />
-  <Typography element="h3" size="larger" fontWeight="black" fontWeight="bold">
+  <Typography element="h3" size="larger" fontWeight="bold">
     Content Group
   </Typography>
   <br />
-  <Typography element="h4" size="large" fontWeight="black" fontWeight="bold">
+  <Typography element="h4" size="large" fontWeight="bold">
     Section
   </Typography>
   <br />
-  <Typography element="h5" size="base" fontWeight="black" fontWeight="bold">
+  <Typography element="h5" size="base" fontWeight="bold">
     Subsection
   </Typography>
   <br />
-  <Typography
-    element="h6"
-    size="small"
-    textCase="uppercase"
-    fontWeight="black"
-    fontWeight="bold"
-  >
+  <Typography element="h6" size="small" textCase="uppercase" fontWeight="bold">
     Overline
   </Typography>
   <br />
