--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -9,7 +9,7 @@ import { InputText } from ".";
 
 # Input Text
 
-<ComponentStatus stage="pre" responsive="no" accessible="no" />
+<ComponentStatus stage="rc" responsive="yes" accessible="no" />
 
 Input Text is used in forms to accept input from users.
 
