adjust heading documentation

--- a/packages/components/src/Heading/Heading.mdx
+++ b/packages/components/src/Heading/Heading.mdx
@@ -10,19 +10,45 @@ import { Heading } from ".";
 
 <ComponentStatus stage="pre" responsive="no" accessible="yes" />
 
-In Jobber a Heading is used to …
+Headings are used as the titles of each major section of a page in the
+interface. Reserved for short, important text or numbers.
 
-## Simple Example
+## Page title
 
 <Playground>
-  <Heading variation="page">Page title</Heading>
-  <Heading variation="subtitle">Subtitle</Heading>
-  <Heading variation="content">Content group</Heading>
-  <Heading variation="section">Section</Heading>
-  <Heading variation="subsection">Subsection</Heading>
-  <Heading variation="overline">Overline</Heading>
+  <Heading variation="page">Today's activities</Heading>
 </Playground>
 
-## Heading Properties
+## Subtitle
+
+<Playground>
+  <Heading variation="subtitle">Client details</Heading>
+</Playground>
+
+## Content title
+
+<Playground>
+  <Heading variation="content">Recommended actions</Heading>
+</Playground>
+
+## Section
+
+<Playground>
+  <Heading variation="section">Confirm billing details</Heading>
+</Playground>
+
+## Subsection
+
+<Playground>
+  <Heading variation="subsection">Billing cycle</Heading>
+</Playground>
+
+## Overline
+
+<Playground>
+  <Heading variation="overline">Business Management</Heading>
+</Playground>
+
+## Props
 
 <Props of={Heading} />
