add heading and text documentation

--- a/packages/components/src/Heading/Heading.mdx
+++ b/packages/components/src/Heading/Heading.mdx
@@ -49,6 +49,6 @@ interface. Reserved for short, important text or numbers.
   <Heading variation="overline">Business Management</Heading>
 </Playground>
 
-## Props
+## Heading Properties
 
 <Props of={Heading} />
