--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -1,4 +1,5 @@
 ---
+name: InputText
 menu: Components
 route: /components/input-text
 ---
@@ -13,14 +14,14 @@ import { InputText } from ".";
 
 Input Text is used in forms to accept input from users.
 
-## Basic Text Field
+## Basic InputText
 
 <Playground>
   <InputText size="small" placeholder="Small input" />
   <InputText placeholder="Normal input" />
 </Playground>
 
-## Text Field States
+## InputText States
 
 <Playground>
   <InputText disabled={true} placeholder="Disabled input" />
