--- a/packages/components/src/Heading/Heading.mdx
+++ b/packages/components/src/Heading/Heading.mdx
@@ -15,38 +15,58 @@ interface. Reserved for short, important text or numbers.
 
 ## Page title
 
+This should explain the main subject of the page. There should only be 1 on a
+page.
+
 <Playground>
-  <Heading variation="page">Today's activities</Heading>
+  <Heading variation="page">New client</Heading>
 </Playground>
 
-## Subtitle
+## Category
+
+Used to categorize large groups of content. For example, there are 2 main
+category when creating a new client. Client details and property details.
+
+This heading can be skipped if there's no large groups that need breaking up.
 
 <Playground>
-  <Heading variation="subtitle">Client details</Heading>
+  <Heading variation="category">Client details</Heading>
+  ...
+  <Heading variation="category">Property details</Heading>
+  ...
 </Playground>
 
-## Content title
+## Topic
+
+Used to group content and forms on a single topic
 
 <Playground>
-  <Heading variation="content">Recommended actions</Heading>
+  <Heading variation="topic">Contact details</Heading>
+  ...
+  <Heading variation="topic">Notifications</Heading>
+  ...
+  <Heading variation="topic">Additional details</Heading>
+  ...
 </Playground>
 
 ## Section
 
+Used to group contents after a topic or inside a card component
+
 <Playground>
-  <Heading variation="section">Confirm billing details</Heading>
+  <Heading variation="section">Niño</Heading>
+  <Heading variation="section">Burro</Heading>
+  <Heading variation="section">Cavendish</Heading>
 </Playground>
 
 ## Subsection
 
-<Playground>
-  <Heading variation="subsection">Billing cycle</Heading>
-</Playground>
-
-## Overline
+Used to group contents after a section heading
 
 <Playground>
-  <Heading variation="overline">Business Management</Heading>
+  <Heading variation="subsection">Shape</Heading>
+  <Heading variation="subsection">Color</Heading>
+  <Heading variation="subsection">Taste</Heading>
 </Playground>
 
 ## Heading Properties
