change subhead to intro

--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -28,12 +28,13 @@ De-emphasize a piece of text that is less important to the user
   <Text variation="subdued">Job note linked to related invoice</Text>
 </Playground>
 
-## Subhead
+## Intro
 
-Make the body text stand out from the body copy
+Used as an intro text that gives more infor about the page title. This can only
+be used right after a page title.
 
 <Playground>
-  <Text variation="subhead">
+  <Text variation="intro">
     Attract new customers by asking happy clients for a Facebook recommendation
   </Text>
 </Playground>
