better examples for section headings

--- a/packages/components/src/Heading/Heading.mdx
+++ b/packages/components/src/Heading/Heading.mdx
@@ -54,9 +54,12 @@ Used to group content and forms on a single topic
 Used to group contents after a topic or inside a card component
 
 <Playground>
-  <Heading variation="section">Niño</Heading>
-  <Heading variation="section">Burro</Heading>
-  <Heading variation="section">Cavendish</Heading>
+  <Heading variation="section">Phone numbers</Heading>
+  ...
+  <Heading variation="section">Email</Heading>
+  ...
+  <Heading variation="section">Pigeon</Heading>
+  ...
 </Playground>
 
 ## Subsection
