--- a/packages/components/src/Heading/Heading.mdx
+++ b/packages/components/src/Heading/Heading.mdx
@@ -67,9 +67,7 @@ Used to group contents after a topic or inside a card component
 Used to group contents after a section heading
 
 <Playground>
-  <Heading variation="subsection">Shape</Heading>
-  <Heading variation="subsection">Color</Heading>
-  <Heading variation="subsection">Taste</Heading>
+  <Heading variation="subsection">Recieves SMS</Heading>
 </Playground>
 
 ## Heading Properties
