--- a/packages/components/src/Emphasis/Emphasis.mdx
+++ b/packages/components/src/Emphasis/Emphasis.mdx
@@ -27,7 +27,7 @@ Used to call attention to a text
 
 ## Italic
 
-Used to call attention to a text that less important than a bold
+Used to call attention to a text but it's less important than a bold
 
 <Playground>
   <Text variation="subdued">
