--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -30,8 +30,8 @@ De-emphasize a piece of text that is less important to the user
 
 ## Intro
 
-Used as an intro text that gives more infor about the page title. This can only
-be used right after a page title.
+Used as an intro text that gives more information about the page title. This can
+only be used right after a page title.
 
 <Playground>
   <Text variation="intro">
