Better tests and values.

--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -28,7 +28,7 @@ Input Text is used in forms to accept input from users.
   <InputText
     readonly={true}
     placeholder="Readonly input"
-    defaultValue="You can't change me."
+    value="You can't change me."
   />
   <InputText error placeholder="Invalid input" />
 </Playground>
