--- a/packages/components/src/Heading/Heading.mdx
+++ b/packages/components/src/Heading/Heading.mdx
@@ -15,7 +15,7 @@ interface. Reserved for short, important text or numbers.
 
 ## Heading 1
 
-This should explain the main subject of the page. There should only be 1 on a
+This should explain the main subject of the page. There should only be one on a
 page.
 
 <Playground>
