Consistency is the true foundation of trust. Either keep your promises or do not make them. (#58)
* TextField → InputText

* Specify routes.

* This will now always be rooted.

* No more large input.

* Use base padding.

* Match Input styling to SG-1.

* Add a readonly flag for the input.

* Specify name.

* Better tests and values.

--- a/packages/components/src/DescriptionList/DescriptionList.mdx
+++ b/packages/components/src/DescriptionList/DescriptionList.mdx
@@ -1,6 +1,7 @@
 ---
-name: Description List
+name: DescriptionList
 menu: Components
+route: /components/description-list
 ---
 
 import { Playground, Props } from "docz";
