--- a/plop/templates/component/{{name}}.mdx
+++ b/plop/templates/component/{{name}}.mdx
@@ -1,5 +1,7 @@
 ---
+name: {{ pascalCase name }}
 menu: Components
+route: /components/{{ dashCase name }}
 ---
 
 import { Playground, Props } from "docz";
