--- a/packages/components/src/Heading/Heading.mdx
+++ b/packages/components/src/Heading/Heading.mdx
@@ -24,8 +24,8 @@ page.
 
 ## Heading 2
 
-Used to categorize large groups of content. For example, there are 2 main
-category when creating a new client. Client details and property details.
+Used to categorize large groups of content. For example, there are two main
+categories when creating a new client. Client details and property details.
 
 This heading can be skipped if there's no large groups that need breaking up.
 
