--- a/packages/components/src/Card/Card.mdx
+++ b/packages/components/src/Card/Card.mdx
@@ -27,7 +27,7 @@ to provide extra structure in a predictable way.
 ## Clickable Cards
 
 <Playground>
-  <Card href="#">
+  <Card url="#">
     <p>I'm a link!</p>
   </Card>
 
